# qemu_mgr

./: CHANGELOG  Makefile  Makefile.in  README.md  actions.c  actions.h  command-line.c  command-line.h  common.c  common.h  config-templates.c  config-templates.h  configure  configure.ac  devices.c  devices.h  image-config.c  image-config.h  image-defaults.c  image-defaults.h  images.c  images.h  interactive.c  interactive.h  interactive_vt100.c  interactive_vt100.h  interactive_xdialog.c  interactive_xdialog.h  kvm.c  kvm.h  main.c  mount.c  mount.h  os-commands.c  os-commands.h  qmp.c  qmp.h  screenshot.c  screenshot.h  sound-devices.c  (+5 more)
libUseful-4/: Makefile
qemu-doc/: qemu-qmp-ref.txt
